# conus_comparison_lafferty-etal-2024

./: .gitignore  README.md  pyproject.toml
code/: 01a_metrics_nex-gddp-cmip6.ipynb  01a_metrics_star-esdm.ipynb  01b_metrics_loca2.ipynb  01b_metrics_macav2metdata.ipynb  01b_metrics_star-esdm.ipynb  01c_metrics_gard-lens.ipynb  01c_metrics_gard-lens.py  01c_metrics_loca.ipynb  01c_metrics_loca2.ipynb  01d_LOCAL_metrics_cil-gdpcir.ipynb  01d_MPC_metrics_cil-gdpcir.ipynb  01d_metrics_cil-gdpcir.ipynb  01d_transfer_from_azure.sh  01f_metrics_cil-gdpcir_local.ipynb  01g_metrics_gard-lens.ipynb  02_city_data.ipynb  02_plots.ipynb  02a_metrics_cil-gdpcir.ipynb  03_plots.ipynb  99_plots.ipynb  99_poster_plots.ipynb  LICENSE  metric_funcs.py  utils.py
scripts/: 01a_metrics_star-esdm.ipynb  01b_metrics_loca2.ipynb  01c_metrics_gard-lens.ipynb  01c_metrics_gard-lens.sh  01d_metrics_tgw.ipynb  01e_metrics_obs.ipynb  02a_eva.ipynb  02a_eva_nonstat.sh  02b_eva_cities.ipynb  02b_eva_stat.ipynb  02b_trends.ipynb  02c_cities.ipynb  02c_trends.ipynb  02d_averages.ipynb  02e_cities.ipynb  03_sa.ipynb  03a_sa-eva.ipynb  03a_sa.ipynb  03b_sa-trends.ipynb  03b_sa_cities.ipynb  03c_sa-averages.ipynb  03c_sa-trends.ipynb  03c_sa_cities.ipynb  03d_sa_cities.ipynb  04a_main_plots.ipynb  04b_si_plots.ipynb  04c_si_city_checks.ipynb  05_gev_evals.ipynb  99_additional_checks.ipynb  99_cesm_check.ipynb  99_misc_figs.ipynb  99_old.ipynb  99_other_checks.ipynb  99_random.ipynb  99_testing.ipynb
src/: array_gev_nonstat.sh  avg_utils.py  fit_gev_nonstat_mle.py  fit_gev_nonstat_mle_R.py  gev_utils.R  (+21 more)
(+21 files in other folders)
