[project]
name = "conus-comparison-lafferty-etal-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "dask-jobqueue>=0.9.0",
    "dask-labextension>=7.0.0",
    "dask>=2024.11.2",
    "distributed>=2024.11.2",
    "h5netcdf>=1.4.1",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "mpl-fontkit>=0.5.1",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "rinoh-mscorefontinstaller>=0.1.0",
    "scipy>=1.14.1",
    "xarray-regrid>=0.4.0",
    "xarray>=2024.10.0",
]
