[project]
name = "conus-comparison-lafferty-etal-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blackjax>=1.2.4",
    "cartopy>=0.24.1",
    "dask-jobqueue>=0.9.0",
    "dask-labextension>=7.0.0",
    "dask>=2024.11.2",
    "distributed>=2024.11.2",
    "h5netcdf>=1.4.1",
    "jax>=0.5.0",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "mpl-fontkit>=0.5.1",
    "netcdf4>=1.7.2",
    "numba>=0.61.0",
    "numpy<2.0.0",
    "nutpie>=0.13.2",
    "pandas>=2.2.3",
    "pymc-extras>=0.2.1",
    "pymc>=5.15.0",
    "pytensor>=2.26.4",
    "rinoh-mscorefontinstaller>=0.1.0",
    "scipy>=1.14.1",
    "xarray-regrid>=0.4.0",
    "xarray>=2024.10.0",
]
